--- a/Spotifree/ko-KR.lproj/Localizable.strings
+++ b/Spotifree/ko-KR.lproj/Localizable.strings
@@ -28,6 +28,9 @@
 /* Menu: Notifications */
 "MENU_NOTIFICATIONS" = "알림";
 
+/* Menu: Skip Explicit Songs */
+"MENU_SKIP_EXPLICIT" = "Skip Explicit Songs";
+
 /* Menu: Quit */
 "MENU_QUIT" = "프로그램 종료";
 
@@ -48,6 +51,9 @@
 
 /* Notification: A Spotify ad was detected! Music will be back in about %i seconds... */
 "NOTIFICATION_AD_DETECTED" = "광고가 감지되었습니다! 음악이 약 %i 초 뒤에 다시 시작됩니다...";
+
+/* Notification: Skipped explicit song */
+"NOTIFICATION_SKIP_EXPLICIT" = "Skipped explicit song";
 
 /* General: OK */
 "OK" = "확인";
